--- a/chat/.env.production
+++ b/chat/.env.production
@@ -1,7 +1,7 @@
-VITE_API_SOCKET=https://chat.batuhanciftci.net
-VITE_API_USER=https://chat.batuhanciftci.net/users
-VITE_API_UPLOAD=https://chat.batuhanciftci.net
-VITE_API_END=https://chat.batuhanciftci.net/api/rooms
+VITE_API_SOCKET=https://yourdomain.com
+VITE_API_USER=https://chat.yourdomain.com/users
+VITE_API_UPLOAD=https://chat.yourdomain.com
+VITE_API_END=https://chat.yourdomain.com/api/rooms
 
 
 
